# agent-lightning

./: .gitignore  .pre-commit-config.yaml  RAI_README.md  README.md  analyze_mismatch.py  litellm_proxy.py  mkdocs.yml  package.json  pyproject.toml  pyrightconfig.json  run.sh  run_local.sh  run_qwen2.5_coder_local.sh  run_train_local.sh  syrus_implementation.py  test.py  入门指南.md
.cache_xdg/pre-commit/: db.db
.github/workflows/: backport.yml  badge-apo.yml  badge-calc-x.yml  badge-compat.yml  badge-examples.yml  badge-latest.yml  badge-spider.yml  badge-unsloth.yml  codeql.yml  docs.yml  examples-adk.yml  examples-apo.yml  examples-calc-x.yml  examples-compat.yml  examples-spider.yml  examples-unsloth.yml  examples.yml  issue-comment.yml  pypi-nightly.yml  pypi-release.yml  tests-full.yml  tests.yml
2509/: AgentZero_720dfb66-aware-panther-train_calc_metrics.csv  AgentZero_9d3076ad-bold-alien-train_calc_g1_metrics.csv  AgentZero_c38c8374-aware-panther-train_calc_instrument_metrics.csv  chartjs_output.json  convert_to_chartjs.py  fetch_calc_legacy_results.py
agentlightning/: __init__.py  client.py  execution.py  litagent.py  llm_proxy.py  logging.py  reward.py  runner.py  server.py  trace.py  trainer.py  types.py
agentlightning/adapter/: __init__.py  messages.py  triplet.py
agentlightning/algorithm/: __init__.py  base.py  fast.py  mock.py
agentlightning/cli/: __init__.py  store.py  vllm.py
agentlightning/emergence/: __init__.py  dissolution.py  entropy.py  monitoring.py  novelty.py  pareto.py  reward_audit.py  semconv.py  types.py
agentlightning/emitter/: exception.py  message.py  object.py  reward.py  utils.py
agentlightning/execution/: __init__.py  base.py  client_server.py  shared_memory.py
agentlightning/instrumentation/: __init__.py  agentops.py  agentops_langchain.py  vllm.py  weave.py
agentlightning/litagent/: __init__.py  decorator.py  litagent.py
agentlightning/prompt/: litagent.py  loop.py  runner.py  server.py  trainer.py  types.py
agentlightning/runner/: __init__.py  agent.py  base.py  legacy.py
agentlightning/store/: __init__.py  base.py  client_server.py  memory.py  threading.py  utils.py
agentlightning/tracer/: agentops.py  base.py  http.py  phoenix.py  triplet.py  types.py  weave.py
agentlightning/trainer/: __init__.py  trainer.py
agentlightning/tuner/: base.py  verl.py
agentlightning/types/: core.py  resources.py  tracer.py
agentlightning/utils/: cache.py  id.py  multi_provider_ai_client.py  multi_provider_client.py  otlp.py
agentlightning/verl/: async_server.py  config.yaml  core_algos.py  daemon.py  dataset.py  entrypoint.py  trainer.py
contrib/: .gitignore  CODEOWNERS  README.md
dashboard/: package-lock.json  package.json
docs/: index.md  open-emergence-design.md  requirements.txt  troubleshooting.md
docs/algorithm-zoo/: verl.md
docs/assets/: sql-agent-training-result.json
docs/community/: contributing.md  maintainers.md
docs/deep-dive/: architecture.md  concepts.md  (+5 more)
examples/: .gitignore  README.md
latest/: sitemap.xml
result/: qwen2.5-coder-0.5b-local.jsonl  qwen2.5-coder-0.5b.txt  qwen2.5-coder-1.5b-insruct-dashscopeApi.txt  qwen2.5-coder-1.5b-instruct-local.jsonl
scripts/: badge_aggregation.js  base.Dockerfile  build_vm_image.sh  bump_version.sh  check_python_headers.py  check_python_install.sh  cleanup.sh  delete_tinker_checkpoints.py  docs-serve.sh  litellm_ci.yaml  litellm_run.sh  litellm_sanity_check.py  restart_ray.sh  setup_latest.sh  setup_latest_gpu.sh  setup_stable.sh  setup_stable_gpu.sh  setup_type_checking.sh  trigger_examples.js  trigger_on_label.js  validate_example_wandb.py  wandb_download_result.py
tests/: test_agent_frameworks.py  test_cache_fix.py  test_client.py  test_decorator_executability.py  test_emitter.py  test_litagent_hooks.py  test_llm_proxy.py  test_otel.py  test_tracer.py  test_tracer_http.py
(+529 files in other folders)
