[project]
name = "agentlightning"
version = "0.2.0"
description = "Agent Lightning is the absolute trainer to light up AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz",
  "psutil",
  "setproctitle",
  "flask",
  "agentops>=0.4.13",
  "httpdbg",
  "uvicorn",
  "fastapi",
  "aiohttp",
  "opentelemetry-api>=1.35",
  "opentelemetry-sdk>=1.35",
  "opentelemetry-exporter-otlp>=1.35",
  "litellm[proxy]>=1.77",
  "pydantic>=2.11",
  "openai",
  "rich",
]

[project.optional-dependencies]
apo = [
  "poml",
]
# It's not recommended to use agentlightning[verl] to install VERL and its dependencies.
# though it's listed here for completeness.
verl = [
  "verl<0.6.0",
  "vllm>=0.8.4,<0.11.0",
  "flash-attn",
]
# These are only used to set indexes needed.
cpu = [
  "torch"
]
gpu = [
  "torch"
]

[tool.uv.sources]
torch = [
  { index = "torch-gpu", extra = "gpu" },
  { index = "torch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu128"

[project.scripts]
agl = "agentlightning.cli:main"

[dependency-groups]
dev = [
  "flake8",
  "pytest",
  "hatch",
  "pytest-asyncio",
  "pre-commit",
  "pytest-rerunfailures",
  "black",
  "isort",
  "pyright",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-git-authors-plugin",
  "mkdocs-macros-plugin",
  "mkdocs-autorefs",
]
experiment = [
  "random-word",
  "gdown",
]

# Training-heavy dependencies.
torch-stable = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "transformers>=4.55.0",
  "flash-attn>=2.8.3",
  "vllm>=0.10.2",
  # LiteLLM can then be upgraded with new vLLM
  "litellm[proxy]>=1.78",
]
torch-legacy = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "transformers==4.53.3",
  "flash-attn==2.8.1",
  "vllm==0.9.2",
]
trl = [
  # Only work with PyTorch 2.8.0+.
  {include-group = "torch-stable"},
  # https://github.com/unslothai/unsloth/issues/3451
  "unsloth<=2025.10.1",
  "unsloth_zoo<=2025.10.1",
  "bitsandbytes",
  "peft",
  "datasets",
  "transformers",
  "trl",
  "kernels",
  "vllm",
]

# Agent-related dependencies.
autogen = [
  "autogen-agentchat",
  "autogen-ext[openai]",
  "mcp",
  "uv",
]
openai-agents = [
  "openai-agents",
  "mcp",
  "uv",
]
anthropic = [
  "anthropic",
]
langchain = [
  "langgraph<1.0",
  "langchain[openai]<1.0",
  "langchain-community",
  "langchain-text-splitters<1.0",
]
sql = [
  "sqlparse",
  "nltk",
]

# Summarize into large installable groups.
agents = [
  {include-group = "autogen"},
  {include-group = "openai-agents"},
  {include-group = "langchain"},
  {include-group = "sql"},
  {include-group = "anthropic"},
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
  [
    { group = "torch-stable" },
    { group = "torch-legacy" },
  ],
]
environments = [
  "sys_platform == 'linux'",
]
index-strategy = "unsafe-best-match"
dependency-metadata = [
  { name = "litellm", provides-extra = ["proxy"], version = "1.77.0", requires-dist = ["openai==1.90.0"] }
]

[tool.uv.extra-build-dependencies]
flash-attn = [
  { requirement = "torch", match-runtime = true },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentlightning"]
include = ["**/*.yaml", "**/*.yml", "**/*.poml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  _version\.py
)
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["agentlightning"]
extend_skip_glob = [
  "data/**",
  "_version.py",
]
